--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -1,5 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
+<style>
+nav.header {
+    background-color: #000b4f;
+    color:white;
+}
+nav input {
+    font-family: 'Open Sans', sans-serif;
+    border: none;
+    background-color: transparent;
+    color: silver;
+    font-size: 20px;
+}
+nav input:hover {
+    color: white;
+}
+</style>
   <head>
     <meta charset="utf-8">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
@@ -25,6 +41,12 @@
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
+    <nav class="header">
+      <h1 id="title">Sequencer</h1>
+      <input type="button" value="Bass" id="create-button"></input>
+      <input type="button" value="Drums" id="join-button"></input>
+      <input type="button" value="Synth" id="home-button"></input>
+    </nav>
     <div id="root"></div>
     <!--
       This HTML file is a template.
